added logger and try catch to backend and small fixes on frontend